Fix dependency declaration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     def rxDependencies = rootProject.ext.rxDependencies
     def uiDependencies = rootProject.ext.uiDependencies
 
-    uiDependencies.flexibleAdapter
+    implementation uiDependencies.flexibleAdapter
 
     // Google
     implementation googleDependencies.material
