--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".features.home.MainActivity">
+
+        <activity android:name=".features.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,6 +54,8 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".features.home.MainActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
