--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,9 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
-        <activity android:name=".features.home.MainActivity" />
+        <activity
+            android:name=".features.home.MainActivity"
+            android:label="@string/home_title" />
         <activity
             android:name=".features.profile.ProfileActivity"
             android:label="@string/empty" />
