--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -12,6 +12,8 @@ ext {
     coreKtxVersion = "1.3.1"
     appCompatVersion = "1.2.0"
     constraintLayoutVersion = "1.1.3"
+    swipeRefreshLayoutVersion = "1.1.0"
+    materialVersion = "1.2.0"
     retrofitVerson = "2.9.0"
     okHttpVersion = "3.13.1"
     rxJavaVersion = "2.2.1"
@@ -28,14 +30,15 @@ ext {
     ]
 
     googleDependencies = [
-            material         : "com.google.android.material:material:$materialVersion",
-            coreKTX          : "androidx.core:core-ktx:$coreKtxVersion",
-            appCompat        : "androidx.appcompat:appcompat:$appCompatVersion",
-            constraintSupport: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
-            dagger           : "com.google.dagger:dagger:$daggerVersion",
-            daggerCompiler   : "com.google.dagger:dagger-compiler:$daggerVersion",
-            jsr250api        : "javax.annotation:jsr250-api:$jsr250ApiVersion",
-            javaxInject      : "javax.inject:javax.inject:$javaxInjectVersion",
+            material          : "com.google.android.material:material:$materialVersion",
+            swipeRefreshLayout: "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayoutVersion",
+            coreKTX           : "androidx.core:core-ktx:$coreKtxVersion",
+            appCompat         : "androidx.appcompat:appcompat:$appCompatVersion",
+            constraintSupport : "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
+            dagger            : "com.google.dagger:dagger:$daggerVersion",
+            daggerCompiler    : "com.google.dagger:dagger-compiler:$daggerVersion",
+            jsr250api         : "javax.annotation:jsr250-api:$jsr250ApiVersion",
+            javaxInject       : "javax.inject:javax.inject:$javaxInjectVersion",
     ]
 
     kotlinDependencies = [
