--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -13,6 +13,7 @@ ext {
     appCompatVersion = "1.2.0"
     constraintLayoutVersion = "1.1.3"
     swipeRefreshLayoutVersion = "1.1.0"
+    securityCryptoVersion = "1.1.0-alpha02"
     materialVersion = "1.2.0"
     retrofitVerson = "2.9.0"
     okHttpVersion = "3.13.1"
@@ -30,6 +31,7 @@ ext {
     ]
 
     googleDependencies = [
+            securityCrypto    : "androidx.security:security-crypto:$securityCryptoVersion",
             material          : "com.google.android.material:material:$materialVersion",
             swipeRefreshLayout: "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayoutVersion",
             coreKTX           : "androidx.core:core-ktx:$coreKtxVersion",
