--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".features.home.MainActivity2"
+            android:label="@string/title_activity_main2"></activity>
+        <activity
             android:name=".features.splash.SplashActivity"
             android:theme="@style/FullScreenTheme">
             <intent-filter>
@@ -21,7 +24,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".features.login.LoginActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
