--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation googleDependencies.constraintSupport
     implementation googleDependencies.swipeRefreshLayout
     implementation googleDependencies.securityCrypto
+    implementation googleDependencies.googleMaps
 
     // Square
     implementation squareDependencies.retrofit2gson
@@ -83,8 +84,7 @@ dependencies {
     implementation 'oauth.signpost:signpost-core:1.2.1.2'
     implementation 'se.akerfeldt:okhttp-signpost:1.1.0'
 
-    def navVersion = "2.3.0-alpha04"
-
+    def navVersion = "2.3.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
