--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,17 +34,11 @@ android {
 }
 
 dependencies {
-    def googleDependencies = rootProject.ext.googleDependencies
     def rxDependencies = rootProject.ext.rxDependencies
-    def squareDependencies = rootProject.ext.squareDependencies
+    def networkDependencies = rootProject.ext.networkDependencies
 
-    // DAGGER 2
-    implementation googleDependencies.dagger
-    kapt googleDependencies.daggerCompiler
-    //compileOnly googleDependencies.jsr250api
-    implementation googleDependencies.javaxInject
-
-    implementation squareDependencies.retrofit2gson
+    // Network
+    implementation networkDependencies.retrofit2gson
 
     // RxJava
     implementation rxDependencies.rxJava
