--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,5 @@ dependencies {
     // Test
     testImplementation testDependencies.mockk
     testImplementation testDependencies.junit
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation testDependencies.coreTesting
 }
